--- a/WEEK 05 - HTML - CSS/CSS exercices/CSS final/styles.css
+++ b/WEEK 05 - HTML - CSS/CSS exercices/CSS final/styles.css
@@ -38,6 +38,8 @@ body{
     background-color: #fffdfa;
 }
 
+
+
 .container{
     max-width: 1110px;
     margin: 0px auto;
@@ -50,6 +52,9 @@ body{
     padding: 15px 0px;
 }
 
+.burger{
+  display: none;
+}
 .menu{
     display: flex;
     align-items: center;
@@ -76,6 +81,24 @@ body{
     max-width: 50px;
   }
 
+
+  @media (max-width: 720px) {
+    .menu{
+      display: none;
+    }
+
+    .burger{
+      display: block;
+      max-width: 50px;
+      padding-right: 20px;
+    }
+
+    .header{
+      padding: 0px 16px;
+    }
+
+
+  }
   .main{
     background-color: #fffdfa;
   }
@@ -91,9 +114,11 @@ body{
     padding-left: 1px;
     margin-bottom: 40px;
     
-   
-    
   }
+
+
+
+
 
   .subcontainerleft{
     display: grid;
@@ -101,8 +126,6 @@ body{
     grid-template-rows: 1fr 220px;
     gap: 30px;
     background-color: #fffdfa;
-    
-    
 
   }
 
@@ -221,6 +244,88 @@ body{
         color: #5E607A;     
     }
 
+
+    @media (max-width: 720px) {
+
+      body{
+        background-color: #fffdfa;
+      }
+
+    
+      .main .container{
+        display: grid;
+        max-width: 100%;
+        grid-template-columns: 1fr;
+        grid-template-rows: 60% 40%;
+        background-color: #fffdfa;
+        padding: 0px 16px;
+        gap: 16px;
+        
+        
+      }
+
+      .container >.subcontainerleft{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        background-color: #fffdfa;
+        max-width: 720px;
+    
+      }
+
+      .imgbckg{
+        grid-row-start:1 ;
+        /* max-width: 95%;
+        max-height: 300px; */
+        background-color: #fffdfa;
+        /* margin-bottom: 15px; */
+    
+      }
+
+      .title{
+        max-width: 100%;
+        
+      }
+      .title>p {
+        font-weight: 800;
+        font-size: 3.5rem;
+        color: black;
+        
+        /* background-color: yellow; */
+        /* max-height: 13.75rem; */
+      }
+    
+
+      .textleft{
+        display: grid;
+       max-width: 720px;
+        grid-row-start: 3;
+        /* max-width: 350px; */
+        padding-right: 10px;
+        padding-left: 2px;
+        background-color: #fffdfa;
+        
+        
+      }
+      .containerright{
+        background-color: black;
+        color: white;
+        max-width: 720px;
+        /* max-width: 350px; */
+        padding: 25px 15px;
+        grid-row-start:2 ;
+        
+        
+        /* display: flex;
+        flex-direction: column; */
+        
+        }
+
+  
+    }
+
+ 
+
     .container-posts{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -228,7 +333,8 @@ body{
         max-width: 1110px;
         margin: 0px auto;
         gap: 24px;
-        /* margin-bottom: 30px; */
+        margin-bottom: 30px;
+        
     }
 
     .sub-container-posts{
@@ -277,7 +383,39 @@ body{
     text-transform: initial;
 
   }
-    
 
+
+  @media (max-width: 720px) {
+
+    .container-posts{
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+      background-color: #fffdfa;
+      max-width: 720px;
+      margin: 50px auto;
+      gap: 24px;
+      margin-bottom: 30px;
+      background-color: #fffdfa;
+      padding: 10px 16px;
+  }
+
+  .sub-container-posts{
+    display: grid;
+    grid-template-columns: 100px 1fr ;
+    gap: 24px;
+    grid-template-rows:130px;
+    
+}
+
+  }
+
+
+     
+
+ /* ____________________________ */
+
+
+ 
 
 
