--- a/WEEK 05 - HTML - CSS/CSS exercices/CSS final/styles.css
+++ b/WEEK 05 - HTML - CSS/CSS exercices/CSS final/styles.css
@@ -90,7 +90,7 @@ body{
     .burger{
       display: block;
       max-width: 50px;
-      padding-right: 20px;
+      padding-right: 0px;
     }
 
     .header{
@@ -192,10 +192,16 @@ body{
     font-size: 14px;
     line-height: 12px;
     text-wrap: nowrap;
+    cursor: pointer;
+    transition: transform 0.2s ease;
     
     
   }
 
+
+  .btn:hover {
+    transform: translateY(-3px);
+  }
 
   .containerright{
     background-color: black;
@@ -346,6 +352,8 @@ body{
     }
 
     
+
+    
     .divimg{
     
         
@@ -353,6 +361,38 @@ body{
         
 
     }
+
+
+  .kenburns-top {
+      animation: kenburns-top 5s ease-out both;
+    }
+
+
+@keyframes kenburns-top {
+  0% {
+    transform: scale(1) translateY(0);
+    transform-origin: 50% 16%;
+  }
+  100% {
+    transform: scale(1.25) translateY(-15px);
+    transform-origin: top;
+  }
+} 
+
+@media (max-width: 720px) {
+  .kenburns-top{
+    animation: none;
+  }
+
+
+}
+
+
+
+
+
+
+
 
     .divtext{
         background-color: #fffdfa;
