--- a/WEEK  - HTML - CSS/CSS exercices/Librarys/Modal and Slide Menu/slide menu/styles.css
+++ b/WEEK  - HTML - CSS/CSS exercices/Librarys/Modal and Slide Menu/slide menu/styles.css
@@ -1,12 +1,81 @@
-/* Estilos básicos para el modal */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  display: inline-block;
+  color: black;
+}
+
+li{
+  list-style: none;
+}
+
+
+img{
+
+width: 100% ;
+height: auto ;
+min-width : 50px ; 
+border: 5px double gray:
+
+}
+
+
 body {
-    font-family: Arial, sans-serif;
-  }
+  font-family: Arial, sans-serif;
+  background-color: #998484;
+}
+
+
+.container{
+  max-width: 1100px;
+  margin: 0 auto;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 0px;
+
+}  
+
+
+.navBar{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-size: .875rem ;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: white;
+  
+}
+
+.div-img{
+  width: 50px;
+}
+
+.burger-div{
+  width: 50px;
+  margin-right: 15px;
+}
+
+.div-menu{
+  
+  display: flex;
+  flex-direction: row;
+}
+
+
   
   .modal {
     display: none; /* starts hidden  , > container  */
     position: fixed;
-    z-index: 9999; /* depth  >>> the content is show in front the page  */
+    z-index: 1; /* depth  >>> the content is show in front the page  */
     left: 0;
     top: 0;
     width: 100%;
@@ -38,4 +107,70 @@ body {
     color: #000;
     text-decoration: none;
   }
+
+
+  /* ////////////////////////// */
+
+
+
+  .modal-menu{
+    display: none;
+    /* starts hidden  , > container  */
+    position: fixed;
+    z-index: 9999; /* depth  >>> the content is show in front the page  */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* background  layer*/
+  }
+
+
+
+  .menu-content {
+    background-color: #fff;
+    margin: 0; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 50vh; 
+    height: 100vh ;
+    text-align: center;
+    border-radius: 8px;
+    float: right;
+
+      /* transform in flexbox to center the content */
+      display: flex;
+      flex-direction: column; 
+      justify-content: center; /* Centra verticalmente */
+      align-items: center; /* Centra horizontalmente */
+
+      position: relative; /* allos to fix the btn close-btn-menu */
+  }
+
+
+  .close-btn-menu{
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    /* allows to fix the btn close-btn-menu */
+    position: absolute;
+    top: 10px; 
+    right: 10px; 
+  }
+
+
+
+  .close-btn-menu:hover,
+  .close-btn-menu:focus {
+    color: #000;
+    text-decoration: none;
+  }
+
+
+
+
+ 
   
