--- a/WEEK  - HTML - CSS/CSS exercices/javascript week 10/Project Bemovies front by me/styles.css
+++ b/WEEK  - HTML - CSS/CSS exercices/javascript week 10/Project Bemovies front by me/styles.css
@@ -409,7 +409,7 @@ footer p{
 
 
 #myModalmovie {
-    display: block; /* hyde au debut */
+    display: none; /* hyde au debut   change to block */
     position: fixed;
     z-index: 9998;
     left: 0;
