--- a/WEEK  - HTML - CSS/CSS exercices/javascript week 10/project bemovies front by maxime/styles.css
+++ b/WEEK  - HTML - CSS/CSS exercices/javascript week 10/project bemovies front by maxime/styles.css
@@ -192,9 +192,11 @@ color: aliceblue;
 
 #swiper-button-next2{
     color: transparent; 
+    z-index: 99999;  
 }
 #swiper-button-prev2{
     color: transparent;
+    z-index: 99999; 
 }
 
 
@@ -202,7 +204,7 @@ color: aliceblue;
 #swiper-button-next2{
     position: absolute; 
     transform: translateY(230%); 
-    z-index: 1;
+    /* z-index: 1; */
     color: transparent; 
     font-size: 30px; 
     margin: 100px;
@@ -215,11 +217,13 @@ color: aliceblue;
 #swiper-button-next2 img{
     width: 25px;
     height: 25px;   
+    /* z-index: 99999;   */
 }
 
 #swiper-button-prev2 img{
     width: 31px;
-    height: 31px;   
+    height: 31px;
+    /* z-index: 99999;    */
 }
 
 
@@ -814,8 +818,10 @@ display: block;
     margin: auto;
     /* border: dashed red; */
     overflow: hidden;
-    display: none;
- }
+    display: none;  
+ };
+
+  /* display block */
 
 
  #registerBtnHeader{
@@ -877,3 +883,4 @@ header{
     letter-spacing: 3%;
 
 }
+
