--- a/WEEK  - HTML - CSS/CSS exercices/TestForm/ReactForm/src/index.css
+++ b/WEEK  - HTML - CSS/CSS exercices/TestForm/ReactForm/src/index.css
@@ -3,31 +3,25 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+body{
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+}
+
+.container-form {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  width: 400px;
+  /* min-height: 70vh; */
 }
 
 h1 {
@@ -65,4 +59,10 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+.container-form{
+  background-color: #d1d2e4;
+
 }
