--- a/WEEK  - HTML - CSS/CSS exercices/TestForm/ReactForm/src/App.css
+++ b/WEEK  - HTML - CSS/CSS exercices/TestForm/ReactForm/src/App.css
@@ -1,4 +1,4 @@
-input {
+/* input {
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
@@ -18,4 +18,4 @@ input {
     color: red;
     font-size: 0.9em;
   }
-  
+   */
