--- a/WEEK  - HTML - CSS/CSS exercices/TestForm/ReactForm/src/index.css
+++ b/WEEK  - HTML - CSS/CSS exercices/TestForm/ReactForm/src/index.css
@@ -52,11 +52,14 @@ body::before {
   border-radius: 8px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
   border: 2px solid rgb(250, 250, 250);
-  width: 100%;
-  width: 400px;
+  /* width: 100%; */
+  width: 370px;
   text-align: center;
   backdrop-filter: blur(20px);
   align-self: center;
+   /* Agregar altura máxima y desplazamiento vertical */
+   max-height: 90vh; /* Ajusta según el diseño */
+   overflow-y: auto; /* Permite desplazamiento vertical */
 }
 
 h1 {
@@ -105,7 +108,7 @@ input::placeholder {
 
 
 
-button[type="submit"] {
+button[type="submit"],.btnEdit {
   background-color: #f0f4f8;
   color: rgb(24, 24, 24);
   padding: 0.75rem 1.5rem;
@@ -117,7 +120,7 @@ button[type="submit"] {
   width: 100%;
 }
 
-button[type="submit"]:hover {
+button[type="submit"]:hover, .btnEdit:hover {
   background-color: #252525;
   color:#f0f4f8 ;
 }
@@ -160,4 +163,34 @@ ul li {
   color: green;
   font-weight: bold;
   margin-top: 1rem;
+}
+
+
+
+.formSubmitted p,h2{
+  color: #f8f9fa;
+}
+
+
+/* scroll styles  */
+.container-form::-webkit-scrollbar {
+  width: 8px; 
+  height: 8px; 
+}
+
+.container-form::-webkit-scrollbar-thumb {
+  background-color: #0fb6e0; 
+  border-radius: 10px; 
+  border: 2px solid #fff; 
+}
+
+/* Estilo del track (la parte donde se desliza el thumb) */
+.container-form::-webkit-scrollbar-track {
+  background-color: #f1f1f1; 
+  border-radius: 10px; 
+}
+
+
+.container-form::-webkit-scrollbar-thumb:hover {
+  background-color: #0c8fa3; 
 }
